--- a/blocks/latest-resources/latest-resources.css
+++ b/blocks/latest-resources/latest-resources.css
@@ -7,12 +7,6 @@ main .section.latest-resources-container:has( .latest-resources.block:empty){
   display: none;
 }
 
-main .section.latest-resources-container .default-content-wrapper h2 {
-  font-family: var(--ff-proxima-light);
-  font-size: var(--heading-font-size-xl);
-  text-align: center;
-}
-
 main .carousel-wrapper.latest-resources-wrapper {
   width: var(--carousel-container-width);
   padding: 0 15px;
